--- a/styles.css/fields/checkbox.css
+++ b/styles.css/fields/checkbox.css
@@ -1,7 +1,7 @@
 .terms-wrapper {
     margin-top: 3rem;
     display: flex;
-    gap: 175rem;
+    gap: .75rem;
     align-items: flex-start;
 }
 
@@ -37,3 +37,4 @@
         background-image: url(../../assets/icons/checkbox-checked.svg);
     }
 }
+
